demo-api1/canary/demo-api1-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-api1-svc
  namespace: api
spec:
  selector:
    app: demo-api1
  
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
    # nodePort: 30031
  # type: LoadBalancer
